--- a/publicParking/src/main/resources/templates/signup.html
+++ b/publicParking/src/main/resources/templates/signup.html
@@ -11,9 +11,9 @@
     <form action="/user/signup" method="post">
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 
-        <input type="text" name="userEmail" placeholder="이메일 입력해주세요">
-        <input type="password" name="userPassword" placeholder="비밀번호">
-        <input type="text" name="userNickname" placeholder="닉네임">
+        <input type="text" name="email" placeholder="이메일 입력해주세요">
+        <input type="password" name="password" placeholder="비밀번호">
+        <input type="text" name="nickname" placeholder="닉네임">
         <button type="submit">가입하기</button>
     </form>
 </body>
