--- a/publicParking/src/main/resources/templates/index.html
+++ b/publicParking/src/main/resources/templates/index.html
@@ -1,68 +1,164 @@
-  
+
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
-<head>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+
+  <head>
+
     <meta charset="UTF-8">
-    <title>메인</title>
-    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <title>Plot Listing HTML5 Website Template</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" href="assets/css/fontawesome.css">
+    <link rel="stylesheet" href="assets/css/templatemo-plot-listing.css">
+    <link rel="stylesheet" href="assets/css/animated.css">
+    <link rel="stylesheet" href="assets/css/owl.css">
+<!--
+
+TemplateMo 564 Plot Listing
+
+https://templatemo.com/tm-564-plot-listing
+
+-->
+  </head>
+
+
 <body>
-    <h1>메인 페이지</h1>
-    <hr>
-    <a sec:authorize="isAnonymous()" th:href="@{/user/login}">로그인</a>
-    <a sec:authorize="isAuthenticated()" th:href="@{/user/logout}">로그아웃</a>
-    <a sec:authorize="isAnonymous()" th:href="@{/user/signup}">회원가입</a>
-    <a sec:authorize="hasRole('ROLE_MEMBER')" th:href="@{/user/info}">내정보</a>
-    <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/admin}">어드민</a>
-    <ul>
-		<li onclick="kakaoLogin();">
-	      <a href="javascript:void(0)">
-	          <span>카카오 로그인</span>
-	      </a>
-		</li>
-		<li onclick="kakaoLogout();">
-	      <a href="javascript:void(0)">
-	          <span>카카오 로그아웃</span>
-	      </a>
-		</li>
-	</ul>
-    <script>
-		Kakao.init('beb04cd568bcb1c7ca42d7175c57e30d'); //발급받은 키 중 javascript키를 사용해준다.
-		console.log(Kakao.isInitialized()); // sdk초기화여부판단
-		//카카오로그인
-		function kakaoLogin() {
-		    Kakao.Auth.login({
-		      success: function (response) {
-		        Kakao.API.request({
-		          url: '/v2/user/me',
-		          success: function (response) {
-		        	  console.log(response)
-		          },
-		          fail: function (error) {
-		            console.log(error)
-		          },
-		        })
-		      },
-		      fail: function (error) {
-		        console.log(error)
-		      },
-		    })
-		  }
-		//카카오로그아웃  
-		function kakaoLogout() {
-		    if (Kakao.Auth.getAccessToken()) {
-		      Kakao.API.request({
-		        url: '/v1/user/unlink',
-		        success: function (response) {
-		        	console.log(response)
-		        },
-		        fail: function (error) {
-		          console.log(error)
-		        },
-		      })
-		      Kakao.Auth.setAccessToken(undefined)
-		    }
-		  }  
-</script>
+
+
+
+  <!-- ***** Preloader Start ***** -->
+  <div id="js-preloader" class="js-preloader">
+    <div class="preloader-inner">
+      <span class="dot"></span>
+      <div class="dots">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+  </div>
+  <!-- ***** Preloader End ***** -->
+
+  <!-- ***** 헤더부분 시작 ***** -->
+  <header th:insert="common/header.html" class="header-area header-sticky wow slideInDown" data-wow-duration="0.75s" data-wow-delay="0s">
+  </header>
+  <!-- ***** 헤더 부분 끝 ***** -->
+
+
+  <div class="main-banner">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="top-text header-text">
+            <h6>서울시 공영주차장 전기충전소 정보 서비스</h6>
+            <h2>Find Nearby parking lot &amp; electric vehicle charging station</h2>
+          </div>
+        </div>
+        <div class="col-lg-12">
+          <form id="search-form" name="gs" method="submit" role="search" action="/search">
+            <div class="row">
+              <div class="col-lg-3 align-self-center">
+                  <fieldset>
+                      <select name="area" class="form-select" aria-label="Area" id="chooseCategory" onchange="this.form.click()">
+                          <option selected>All </option>
+                          <option value="New Village">공영주차장</option>
+                          <option value="Old Town">전기차 충전소</option>
+                          <option value="Modern City">게시판</option>
+                      </select>
+                  </fieldset>
+              </div>
+              <div class="col-lg-3 align-self-center">
+                  <fieldset>
+                      <input type="address" name="address" class="searchText" placeholder="Enter a location" autocomplete="on" required>
+                  </fieldset>
+              </div>
+             
+              <div class="col-lg-3 ">                        
+                  <fieldset>
+                      <button class="main-button " img src="assets/images/right.png" ><i class="fa fa-search"></i> Search Now</button>
+                  </fieldset>
+              </div>
+            </div>
+          </form>
+        </div>
+     <!--    <div class="col-lg-10 offset-lg-1">
+          <ul class="categories">
+            <li><a href="category.html"><span class="icon"><img src="assets/images/search-icon-01.png" alt="Home"></span>공지사항</a></li>
+            <li><a href="listing.html"><span class="icon"><img src="assets/images/search-icon-02.png" alt="Food"></span> 게시판 &amp; 보도자료</a></li>
+            <li><a href="#"><span class="icon"><img src="assets/images/search-icon-03.png" alt="Vehicle"></span>마이페이지 </a></li>
+            <li><a href="#"><span class="icon"><img src="assets/images/search-icon-04.png" alt="Shopping"></span> Shopping</a></li>
+            <li><a href="#"><span class="icon"><img src="assets/images/search-icon-05.png" alt="Travel"></span> Traveling</a></li>
+          </ul>
+        </div>  -->
+      </div>
+    </div>
+  </div>
+
+
+
+               
+
+
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="about">
+            <div class="logo">
+              <img src="assets/images/black-logo.png" alt="Plot Listing">
+            </div>
+            <p>부릉부릉은 <a rel="nofollow" href="https://templatemo.com/tm-564-plot-listing" target="_parent">공영주차장과 전기차 충전소</a> 정보를 제공하는<br> 사이트입니다. <a rel="nofollow" href="https://www.paypal.me/templatemo" target="_blank"> 이용해주셔서</a> 감사합니다.</p>
+          </div>
+        </div>
+       
+        <div class="col-lg-4">
+          <div class="contact-us">
+            <h4>Contact Us</h4>
+            <p>smile333@gmail.com</p>
+            <div class="row">
+              <div class="col-lg-6">
+                <a href="#">010-020-0340</a>
+              </div>
+              <div class="col-lg-6">
+                <a href="#">090-080-0760</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-12">
+          <div class="sub-footer">
+            <p>Copyright © 2021 Plot Listing Co., Ltd. All Rights Reserved.
+            <br>
+			Design: <a rel="nofollow" href="https://templatemo.com" title="CSS Templates">TemplateMo</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+
+  <!-- Scripts -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/owl-carousel.js"></script>
+  <script src="assets/js/animation.js"></script>
+  <script src="assets/js/imagesloaded.js"></script>
+  <script src="assets/js/custom.js"></script>
+  
+  <script>
+  	let nav_li_a = document.querySelector(".nav li:nth-of-type(1) a");
+  	nav_li_a.classList.add("active");
+  </script>
+
 </body>
+
 </html>
