--- a/publicParking/src/main/resources/templates/index.html
+++ b/publicParking/src/main/resources/templates/index.html
@@ -14,13 +14,19 @@
     <title>Plot Listing HTML5 Website Template</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css"
+    	th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" 
+    	rel="stylesheet">
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-plot-listing.css">
-    <link rel="stylesheet" href="assets/css/animated.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
+    <link rel="stylesheet" href="assets/css/fontawesome.css"
+    	th:href="@{/assets/css/fontawesome.css}">
+    <link rel="stylesheet" href="assets/css/templatemo-plot-listing.css"
+    	th:href="@{/assets/css/templatemo-plot-listing.css}">
+    <link rel="stylesheet" href="assets/css/animated.css"
+    	th:href="@{/assets/css/animated.css}">
+    <link rel="stylesheet" href="assets/css/owl.css"
+    	th:href="@{/assets/css/owl.css}">
 <!--
 
 TemplateMo 564 Plot Listing
@@ -64,7 +70,7 @@ https://templatemo.com/tm-564-plot-listing
           </div>
         </div>
         <div class="col-lg-12">
-          <form id="search-form" name="gs" method="submit" role="search" action="/search">
+          <form id="search-form" name="gs" method="GET" role="search" action="/search/search">
             <div class="row">
               <div class="col-lg-3 align-self-center">
                   <fieldset>
@@ -78,7 +84,7 @@ https://templatemo.com/tm-564-plot-listing
               </div>
               <div class="col-lg-3 align-self-center">
                   <fieldset>
-                      <input type="address" name="address" class="searchText" placeholder="Enter a location" autocomplete="on" required>
+                      <input type="text" name="address" class="searchText" placeholder="Enter a location" autocomplete="on" required>
                   </fieldset>
               </div>
              
@@ -147,12 +153,18 @@ https://templatemo.com/tm-564-plot-listing
 
 
   <!-- Scripts -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/owl-carousel.js"></script>
-  <script src="assets/js/animation.js"></script>
-  <script src="assets/js/imagesloaded.js"></script>
-  <script src="assets/js/custom.js"></script>
+  <script src="vendor/jquery/jquery.min.js"
+  	th:src="@{/vendor/jquery/jquery.min.js}"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"
+  	th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+  <script src="assets/js/owl-carousel.js"
+  	th:src="@{/assets/js/owl-carousel.js}"></script>
+  <script src="assets/js/animation.js"
+  	th:src="@{/assets/js/animation.js}"></script>
+  <script src="assets/js/imagesloaded.js"
+  	th:src="@{/assets/js/imagesloaded.js}"></script>
+  <script src="assets/js/custom.js"
+  	th:src="@{/assets/js/custom.js}"></script>
   
   <script>
   	let nav_li_a = document.querySelector(".nav li:nth-of-type(1) a");
