--- a/publicParking/src/main/resources/templates/listing.html
+++ b/publicParking/src/main/resources/templates/listing.html
@@ -14,14 +14,14 @@
     <title>Plot Listing Page</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../static/vendor/bootstrap/css/bootstrap.min.css" th:href="@{/vendor/bootstrap/css/bootstrap.min.css}">
 
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-plot-listing.css">
-    <link rel="stylesheet" href="assets/css/animated.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
+    <link rel="stylesheet" href="../static/assets/css/fontawesome.css" th:href="@{/assets/css/fontawesome.css}">
+    <link rel="stylesheet" href="../static/assets/css/templatemo-plot-listing.css" th:href="@{/assets/css/templatemo-plot-listing.css}">
+    <link rel="stylesheet" href="../static/assets/css/animated.css" th:href="@{/assets/css/animated.css}">
+    <link rel="stylesheet" href="../static/assets/css/owl.css" th:href="@{/assets/css/owl.css}">
 <!--
 
 TemplateMo 564 Plot Listing
@@ -90,6 +90,36 @@ https://templatemo.com/tm-564-plot-listing
 
   <div class="listing-page">
     <div class="container">
+    <!-- 임시로 추가했어요 -->
+      <div class="row">
+	      <div class="panel panel-warning" >
+	        <div class="panel-heading"><span class="glyphicon glyphicon-tags">&nbsp;&nbsp;</span> 아이템 목록</div>
+	        <div class="panel-body">
+	        	<table class="table table-striped">
+					<thead>
+					 	<tr>
+					 		<th>주차장명</th>
+					 		<th>주소</th>
+					 		<th>폰번호</th>
+					 		<th>주차가능 차량수</th>
+					 		<th>비용유무</th>
+					 		<th>기본금액</th>
+					 	</tr>
+				 	</thead>
+				 	<tbody>
+						<tr th:each="parking : ${parkinglist}">
+							<td th:text="${parking.parkingName}"></td>
+							<td th:text="${parking.parkingAddress}"></td>
+							<td th:text="${parking.parkingPhone}"></td>
+							<td th:text="${parking.parkingVehicles}"></td>
+							<td th:text="${parking.parkingFree}"></td>
+							<td th:text="${parking.parkingPrice}"></td>
+						</tr>
+					</tbody>
+				</table>
+	        </div>
+	    </div>
+      </div>
       <div class="row">
         <div class="col-lg-12">
           <div class="naccs">
@@ -828,12 +858,12 @@ https://templatemo.com/tm-564-plot-listing
   </footer>
 
   <!-- Scripts -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/owl-carousel.js"></script>
-  <script src="assets/js/animation.js"></script>
-  <script src="assets/js/imagesloaded.js"></script>
-  <script src="assets/js/custom.js"></script>
+  <script src="../static/vendor/jquery/jquery.min.js" th:src="@{/vendor/jquery/jquery.min.js}"></script>
+  <script src="../static/vendor/bootstrap/js/bootstrap.bundle.min.js" th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+  <script src="../static/assets/js/owl-carousel.js" th:src="@{/assets/js/owl-carousel.js}"></script>
+  <script src="../static/assets/js/animation.js" th:src="@{/assets/js/animation.js}"></script>
+  <script src="../static/assets/js/imagesloaded.js" th:src="@{/assets/js/imagesloaded.js}"></script>
+  <script src="../static/assets/js/custom.js" th:src="@{/assets/js/custom.js}"></script>
 
 </body>
 
