--- a/publicParking/src/main/resources/templates/common/header.html
+++ b/publicParking/src/main/resources/templates/common/header.html
@@ -18,7 +18,7 @@
               <li><a href="/">Home</a></li>
               <li><a href="/board">Notice</a></li>
               <li><a href="/mypage">my page</a></li>
-              <li><div class="main-white-button"><a href="/user/login"><i class="fa fa-plus"></i> login</a></div></li> 
+              <li><div class="main-white-button"><a href="/member/user/login"><i class="fa fa-plus"></i> login</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
                 <span>Menu</span>
