--- a/publicParking/src/main/resources/templates/login.html
+++ b/publicParking/src/main/resources/templates/login.html
@@ -24,7 +24,7 @@
 
 <body>
     <div class="container">
-        <form action="/user/login" method="post" name="login">
+        <form action="/member/user/login" method="post" name="login">
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
         <div class="container-fluid px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto">
             <div class="card card0 border-0">
@@ -93,7 +93,7 @@
 
                             <div class="row mb-4 px-3">
                                 <small class="font-weight-bold">Don't have an account?
-                                    <a class="text-danger " href="/user/signup">Register</a>
+                                    <a class="text-danger " href="/member/user/signup">Register</a>
                                 </small>
                             </div>
                         </div>
