--- a/publicParking/src/main/resources/templates/signup.html
+++ b/publicParking/src/main/resources/templates/signup.html
@@ -24,7 +24,7 @@
 
 <body>
     <div class="container">
-        <form name="signup" action="/user/signup" method="post">
+        <form name="signup" action="/member/user/signup" method="post">
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
         <div class="container-fluid px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto">
             <div class="card card0 border-0">
@@ -96,7 +96,7 @@
 
                             <div class="row mb-4 px-3">
                                 <small class="font-weight-bold">Already a Member?
-                                    <a class="text-success" href="/user/login">Login</a>
+                                    <a class="text-success" href="/member/user/login">Login</a>
                                 </small>
                             </div>
                             <div class="row mb-3 px-3">
