--- a/publicParking/src/main/resources/templates/board/detail.html
+++ b/publicParking/src/main/resources/templates/board/detail.html
@@ -6,7 +6,7 @@
     <link rel='stylesheet' href='/webjars/bootstrap/4.5.0/css/bootstrap.min.css'>
     
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="/assets/css/fontawesome.css">
@@ -82,10 +82,10 @@
 		    <div class="row mt-3">
 		        <div class="col-auto mr-auto"></div>
 		        <div class="col-auto">
-		            <a class="btn btn-info" th:href="@{'/post/edit/' + ${post.id}}" role="button">수정</a>
+		            <a class="btn btn-info" th:href="@{'/board/post/edit/' + ${post.board_id}}" role="button">수정</a>
 		        </div>
 		        <div class="col-auto">
-		            <form id="delete-form" th:action="@{'/post/' + ${post.id}}" method="post">
+		            <form id="delete-form" th:action="@{'/board/post/' + ${post.board_id}}" method="post">
 		                <input type="hidden" name="_method" value="delete"/>
 		                <button id="delete-btn" type="submit" class="btn btn-danger">삭제</button>
 		            </form>
