--- a/publicParking/src/main/resources/templates/board/list.html
+++ b/publicParking/src/main/resources/templates/board/list.html
@@ -71,7 +71,7 @@
                 <span th:text="${post.board_id}"></span>
             </th>
             <td>
-                <a th:href="@{'/post/' + ${post.board_id}}">
+                <a th:href="@{'/board/post/' + ${post.board_id}}">
                     <span th:text="${post.title}"></span>
                 </a>
             </td>
@@ -90,7 +90,7 @@
     <div class="row">
         <div class="col-auto mr-auto"></div>
         <div class="col-auto">
-            <a class="btn btn-primary" th:href="@{/post}" role="button">글쓰기</a>
+            <a class="btn btn-primary" th:href="@{/board/post}" role="button">글쓰기</a>
         </div>
     </div>
     <div>
