--- a/publicParking/src/main/resources/templates/board/update.html
+++ b/publicParking/src/main/resources/templates/board/update.html
@@ -7,7 +7,7 @@
     <link rel='stylesheet' href='/webjars/bootstrap/4.5.0/css/bootstrap.min.css'>
     
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="/assets/css/fontawesome.css">
@@ -51,9 +51,9 @@
   </div>
 
 <div class="container" style="margin-top: 50px;">
-	<form th:action="@{'/post/edit/' + ${post.id}}" method="post">
+	<form th:action="@{'/post/edit/' + ${post.board_id}}" method="post">
 	    <input type="hidden" name="_method" value="put"/>
-	    <input type="hidden" name="id" th:value="${post.id}"/>
+	    <input type="hidden" name="id" th:value="${post.board_id}"/>
 	
         <div class="form-group row">
             <label for="inputTitle" class="col-sm-2 col-form-label"><strong>제목</strong></label>
