--- a/publicParking/src/main/resources/templates/board/post.html
+++ b/publicParking/src/main/resources/templates/board/post.html
@@ -6,7 +6,7 @@
     <link rel='stylesheet' href='/webjars/bootstrap/4.5.0/css/bootstrap.min.css'>
     
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     
     
     <!-- Additional CSS Files -->
@@ -37,7 +37,7 @@
   </div>
 
 <div class="container" style="margin-top: 50px;">
-    <form action="/post" method="post">
+    <form action="/board/post" method="post">
         <div class="form-group row">
             <label for="inputTitle" class="col-sm-2 col-form-label"><strong>제목</strong></label>
             <div class="col-sm-10">
