--- a/publicParking/src/main/resources/templates/board/edit.html
+++ b/publicParking/src/main/resources/templates/board/edit.html
@@ -8,9 +8,9 @@
 <body>
 <header th:insert="common/header.html"></header>
 <div class="container">
-    <form th:action="@{'/post/edit/' + ${post.id}}" method="post">
+    <form th:action="@{'/post/edit/' + ${post.board_id}}" method="post">
         <input type="hidden" name="_method" value="put"/>
-        <input type="hidden" name="id" th:value="${post.id}"/>
+        <input type="hidden" name="board_id" th:value="${post.board_id}"/>
         <div class="form-group row">
             <label for="inputTitle" class="col-sm-2 col-form-label"><strong>제목</strong></label>
             <div class="col-sm-10">
@@ -18,9 +18,9 @@
             </div>
         </div>
         <div class="form-group row">
-            <label for="inputAuthor" class="col-sm-2 col-form-label"><strong>작성자</strong></label>
+            <label for="inputNickname" class="col-sm-2 col-form-label"><strong>작성자</strong></label>
             <div class="col-sm-10">
-                <input type="text" name="author" class="form-control" id="inputAuthor" th:value="${post.author}">
+                <input type="text" name="author" class="form-control" id="inputNickname" th:value="${post.nickname}">
             </div>
         </div>
         <div class="form-group row">
