--- a/publicParking/src/main/resources/templates/board/update.html
+++ b/publicParking/src/main/resources/templates/board/update.html
@@ -53,7 +53,7 @@
 <div class="container" style="margin-top: 50px;">
 	<form th:action="@{'/board/post/edit/' + ${post.board_id}}" method="post">
 	    <input type="hidden" name="_method" value="put"/>
-	    <input type="hidden" name="id" th:value="${post.board_id}"/>
+	    <input type="hidden" name="board_id" th:value="${post.board_id}"/>
 	
         <div class="form-group row">
             <label for="inputTitle" class="col-sm-2 col-form-label"><strong>제목</strong></label>
