상세정보 추가

--- a/publicParking/src/main/resources/templates/listing.html
+++ b/publicParking/src/main/resources/templates/listing.html
@@ -93,7 +93,7 @@ https://templatemo.com/tm-564-plot-listing
     <!-- 임시로 추가했어요 -->
       <div class="row">
 	      <div class="panel panel-warning" >
-	        <div class="panel-heading"><span class="glyphicon glyphicon-tags">&nbsp;&nbsp;</span> 아이템 목록</div>
+	        <div class="panel-heading"><span class="glyphicon glyphicon-tags">&nbsp;&nbsp;</span></div>
 	        <div class="panel-body">
 	        	<table class="table table-striped">
 					<thead>
