--- a/publicParking/src/main/resources/templates/login.html
+++ b/publicParking/src/main/resources/templates/login.html
@@ -58,13 +58,7 @@
                                 <label for="email" class="mb-1">
                                     <h6 class="mb-0 text-sm">Email</h6>
                                 </label>
-                                <input
-                                    class="mb-4"
-                                    id="email"
-                                    type="text"
-                                    name="email"
-                                    placeholder="Email"
-                                    maxlength="30">
+                                <input class="mb-4" id="email" type="text" name="email" placeholder="Email" maxlength="30">
                             </div>
                             <!--이메일 아이디 끝-->
 
@@ -73,12 +67,7 @@
                                 <label for="password" class="mb-1">
                                     <h6 class="mb-0 text-sm">Password</h6>
                                 </label>
-                                <input
-                                    type="password"
-                                    id="password"
-                                    name="password"
-                                    placeholder="Password"
-                                    maxlength="10">
+                                <input type="password" id="password" name="password" placeholder="Password" maxlength="10">
                             </div>
                             <!--패스워드 끝-->
                             <div class="row px-3 mb-4">
