--- a/publicParking/src/main/resources/templates/signup.html
+++ b/publicParking/src/main/resources/templates/signup.html
@@ -52,17 +52,7 @@
                                 <label for="nickname" class="mb-1">
                                     <h6 class="mb-0 text-sm">Nick Name</h6>
                                 </label>
-
-                                <input
-                                    id="nickname"
-                                    class="mb-4"
-                                    type="text"
-                                    name="nickname"
-                                    maxlength="20"
-                                    placeholder="Enter a valid Nick Name"
-                                    oninput = "checkNick()">
-                               
-
+                                <input id="nickname" class="mb-4" type="text" name="nickname" maxlength="20"placeholder="Enter a valid Nick Name" oninput = "checkNick()">
                             </div>
                             <!--nickname-->
 
@@ -71,17 +61,7 @@
                                 <label for="email" class="mb-1">
                                     <h6 class="mb-0 text-sm">Email Address</h6>
                                 </label>
-
-                                <input
-                                    id="email"
-                                    class="mb-4"
-                                    type="text"
-                                    name="email"
-                                    maxlength="25"
-                                    placeholder="Enter a valid email address"
-                                    oninput = "checkId()">
-
-
+                                <input id="email" class="mb-4" type="text" name="email" maxlength="25" placeholder="Enter a valid email address" oninput = "checkId()">
                             </div>
                             <!--email-->
 
@@ -99,12 +79,9 @@
                                     <a class="text-success" href="/member/user/login">Login</a>
                                 </small>
                             </div>
-                            <div class="row mb-3 px-3">
                             <!--버튼-->
-                                <button
-                                    type="button"
-                                    class="btn btn-blue text-center"
-                                    onclick="signup_check();">Create Member</button>
+                            <div class="row mb-3 px-3">
+                                <button type="button" class="btn btn-blue text-center" onclick="signup_check();">Create Member</button>
                             </div>
 
                         </div>
@@ -119,7 +96,7 @@
                 </div>
             </div>
         </div>
-    </form>
+    	</form>
     </div>
     <script>
             function signup_check() {
@@ -179,7 +156,7 @@
         function checkId(){
             var id = $('#email').val(); //id값이 "id"인 입력란의 값을 저장
             $.ajax({
-                url:'/user/idCheck', //Controller에서 인식할 주소
+                url:'member/user/idCheck', //Controller에서 인식할 주소
                 type:'post', //POST 방식으로 전달
                 data:{id:id},
                 success:function(cnt){
